@@ -120,7 +120,7 @@ public class CommentService {
         
         // 콘텐츠 상세 조회 댓글 목록
         @Transactional(readOnly = true)
-        public PageResponse<ContentsCommentResponse> getContentsCommentList(Long mediaId, int page, int size, boolean includeSpoiler) {
+        public PageResponse<ContentsCommentResponse> getContentsCommentList(Long mediaId, Long memberId, int page, int size, boolean includeSpoiler) {
 
                 // mediaId를 기준으로 Contents 엔티티 조회
                 Contents contents = contentsRepository.findByMediaIdAndStatusAndMedia_PublicStatus(mediaId, Status.ACTIVE, PublicStatus.PUBLIC)
@@ -131,8 +131,14 @@ public class CommentService {
                 Page<Comment> commentPage = commentRepository.findByContents_IdAndStatusWithSpoilerCondition(contents.getId(), Status.ACTIVE, includeSpoiler, pageable);
 
                 List<ContentsCommentResponse> responseList = commentPage.getContent().stream()
-                        .map(ContentsCommentResponse::from)
-                        .collect(Collectors.toList());
+                        .map(comment -> {
+                                // 유저 ID가 댓글 작성자의 ID와 같다면 true
+                                Boolean isMine = isCommentOwner(comment, memberId);
+                                
+                                // 수정된 DTO의 of 메서드 사용
+                                return ContentsCommentResponse.from(comment, isMine);
+                        })
+                        .toList();
 
                 PageInfo pageInfo = PageInfo.toPageInfo(
                         commentPage.getNumber(),
@@ -140,5 +146,12 @@ public class CommentService {
                         commentPage.getSize());
 
                 return PageResponse.toPageResponse(pageInfo, responseList);
+        }
+
+        private boolean isCommentOwner(Comment comment, Long currentMemberId) {
+                if (currentMemberId == null) {
+                        return false;
+                }
+                return comment.getMember().getId().equals(currentMemberId);
         }
 }
